# persona-new

./: .gitignore  AGENTS.MD  DATASET_CARD.md  FINAL_REPORT.md  GOAL.MD  IMPLEMENTATION_PLAN.md  LIMITATIONS.md  METHODOLOGY.md  MODEL_RUN_CARD.md  README.md  REMAINING_SPRINTS_PLAN.md  REPRODUCIBILITY.md  SPRINT_1_CONTRACTS.md  aggregate.py  auto_research.py  candidate_generation.py  dataset_promotion.py  dataset_readiness.py  guide.MD  model_matrix.py  persona_eval.py  program.md  pyproject.toml  smoke_evidence.py
approvals/: dev_run_approval.template.json  full_run_approval.template.json
candidates/: README.md
configs/: dev.vllm.json  full.vllm.json  model_matrix.production_open.json  model_pair.qwen2_5_7b.json  smoke.vllm.json
data/: personas.full.jsonl  personas.sample.jsonl
reviews/: personas.full.review.jsonl  personas.sample.review.jsonl
runbooks/: dev_run.md  full_run.md  model_matrix.md  pre_gpu_checklist.md  vllm_smoke.md
schemas/: aggregate_report.schema.json  behavior_tags.schema.json  candidate_persona.schema.json  model_matrix.schema.json  persona_item.schema.json  result_row.schema.json  review_manifest.schema.json  run_manifest.schema.json
tests/: test_adapters.py  test_aggregate.py  test_auto_research.py  test_behavior_metrics.py  test_candidate_generation.py  test_cli.py  test_counts.py  test_dataset_promotion.py  test_dataset_readiness.py  test_manifest.py  test_model_matrix.py  test_persona_adherence.py  test_pre_gpu_artifacts.py  test_prompt_rendering.py  test_reporting_skeletons.py  test_run_cli.py  test_run_guardrails.py  test_schema.py  (+4 more)
(+2 files in other folders)
